<resources>
    <string name="app_name">Week02_28280</string>
    <!-- tambahan -->
    <string name="angka1"> Angka 1</string>
    <string name="angka2"> Angka 2</string>
    <string name="btnTambah"> Tambah </string>
    <string name="btnKurang"> Kurang </string>
    <string name="btnKali"> Kali </string>
    <string name="btnBagi"> Bagi </string>
    <string name="hasil"> Hasil: </string>
    <string name="strTvAngka1"> Angka 1: </string>
    <string name="strTvAngka2"> Angka 2: </string>
</resources>