<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:text="@string/strTvAngka1"/>
        <EditText
            android:id="@+id/angka1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/angka1"
            android:inputType="numberDecimal"
            android:autofillHints="Angka 1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:text="@string/strTvAngka2"/>
        <EditText
            android:id="@+id/angka2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/angka2"
            android:inputType="numberDecimal"
            android:autofillHints="Angka 2" />
    </LinearLayout>
    
    <GridLayout
        android:rowCount="2"
        android:columnCount="2"
        android:layout_width="200dp"
        android:layout_height="100dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_row="0"
            android:layout_column="0"
            android:weightSum="2">
            <Button
                android:id="@+id/btnTambah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnTambah"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/btnKurang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnKurang"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_row="1"
            android:layout_column="0"
            android:weightSum="2">
            <Button
                android:id="@+id/btnKali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnKali"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/btnBagi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnBagi"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:text="@string/hasil"/>
        <EditText
            android:id="@+id/hasil"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text=""
            android:autofillHints="Hasil"
            tools:ignore="LabelFor"
            android:inputType="numberDecimal" />
    </LinearLayout>

</LinearLayout>